<resources>
    <string name="app_name">好味道</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <!-- 动态权限申请 -->
    <string name="common_user_refuse_granted">用户拒绝了授权</string>
    <string name="common_user_already_granted">用户已经授权了</string>
    <string name="common_call_phone_not_granted">拨号权限未曾授权</string>

    <string name="common_shop_default_phone">82258300</string>
    <!-- 符号 -->
    <string name="common_rmb_sign">¥</string>
    <string name="common_multiple_sign">×</string>
    <!-- 单位 -->
    <string name="common_rmb_unit">元</string>

    <string name="activity_main_tabhome">主页</string>
    <string name="activity_main_taborder">订单</string>
    <string name="activity_main_tabmine">我的</string>

    <!--确认订单页面-->
    <string name="activity_confirmOrder_title">确认订单</string>
    <string name="activity_confirmOrder_please_login">请您先登录</string>
    <string name="activity_confirmOrder_toast">请输入地址</string>
    <string name="activity_confirmOrder_addAddress">新增地址</string>
    <string name="activity_confirmOrder_distributionCost">配送费</string>
    <string name="activity_confirmOrder_redPackets">红包</string>
    <string name="activity_confirmOrder_coupon">优惠劵</string>
    <string name="activity_confirmOrder_orderNote">口味、偏好</string>
    <string name="activity_confirmOrder_orderRemarks">订单备注</string>
    <string name="activity_confirmOrder_toBePay">待支付</string>
    <string name="activity_confirmOrder_commit">提交订单</string>
    <!--收货地址页面-->
    <string name="activity_receiveAddress_title">收货地址</string>
    <string name="activity_receiveAddress_deleteAddress">删除地址</string>
    <string name="activity_receiveAddress_are_you_sure_delete_the_address">你确定要删除此地址吗？</string>
    <string name="activity_receiveAddress_addAddress">新增地址</string>
    <!--订单备注页面-->
    <string name="activity_remarkOrder_title">订单备注</string>
    <string name="activity_remarkOrder_remark">备注信息</string>
    <string name="activity_remarkOrder_editHint">请输入备注内容（可不填）</string>
    <!--新增（收货）地址页面、修改地址页面-->
    <string name="activity_addNewAddress_title">新增地址</string>
    <string name="activity_editAddress_title">修改地址</string>
    <string name="activity_address_contacts">联系人</string>
    <string name="activity_address_name">姓名</string>
    <string name="activity_address_gentleman">先生</string>
    <string name="activity_address_lady">女士</string>
    <string name="activity_address_phone">电话</string>
    <string name="activity_address_phoneNumber">收货人电话</string>
    <string name="activity_address_address">地址</string>
    <string name="activity_address_addressDetail">详细地址</string>
    <string name="activity_address_please_enter_a_complete_message">请输入完整的信息！</string>
    <string name="activity_address_please_enter_11_phone_number">请输入11位手机号码!</string>
    <!--在线支付页面-->
    <string name="activity_onlinePayment_title">在线支付</string>
    <string name="activity_onlinePayment_outTakeOrder">外卖订单</string>
    <string name="activity_onlinePayment_the_rest_of_pay_time">支付剩余时间</string>
    <string name="activity_onlinePayment_confirmPayment">确认支付</string>
    <string name="activity_onlinePayment_cancelPayment">取消支付</string>
    <!--支付成功页面-->
    <string name="activity_paySuccess_title">支付成功</string>
    <string name="activity_paySuccess_success">支付成功！</string>
    <!--支付成功页面-->
    <string name="activity_payFailure_title">支付失败</string>
    <string name="activity_payFailure_failure">支付失败！</string>
    <!-- 订单页面 -->
    <string name="activity_order_my">我的订单</string>
    <string name="activity_order_detail_title">订单详情</string>
    <string name="activity_order_info">订单信息</string>
    <string name="activity_order_status">订单状态</string>
    <string name="activity_order_complete">订单已完成</string>
    <string name="activity_order_waiting_for_payment">等待支付</string>
    <string name="activity_order_waiting_for_confirm_receipt">确认收货</string>
    <string name="activity_order_waiting_for_comment">等待评价</string>
    <string name="activity_order_waiting_for_business_orders">等待商家接单</string>
    <string name="activity_order_again">再来一单</string>
    <string name="activity_order_time_out">订单超时</string>
    <string name="activity_order_pay_time_rest">支付剩余时间：</string>
    <string name="activity_order_state_time_out">订单已超时</string>
    <string name="activity_order_goto_pay">去支付</string>
    <string name="activity_order_goto_comment">去评价</string>
    <string name="activity_order_cancel">取消订单</string>
    <string name="activity_order_store_name">店铺名称</string>
    <string name="activity_order_food_name">酸菜肉丝</string>
    <string name="activity_order_food_price">￥10.8</string>
    <string name="activity_order_food_count">×1</string>
    <string name="activity_order_distribute_fee">配送费</string>
    <string name="activity_order_discount">优惠</string>
    <string name="activity_order_discount_text">-￥10</string>
    <string name="activity_order_distribute_fee_text">￥5</string>
    <string name="activity_order_actual_payment">实付</string>
    <string name="activity_order_actual_payment_text">￥16.6</string>
    <string name="activity_order_contact_shop">联系商家</string>
    <string name="activity_order_number">订单号：</string>
    <string name="activity_order_number_text">1203 4218 1723 3509 0579</string>
    <string name="activity_order_time">下单时间：</string>
    <string name="activity_order_time_text">2017-03-16 11:09</string>
    <string name="activity_order_payment_time">支付时间：</string>
    <string name="activity_order_payment_time_text">2017-03-16 11:12</string>
    <string name="activity_order_remarks">备注信息：</string>
    <string name="activity_order_remarks_text">没有备注。</string>
    <string name="activity_order_distribute_info">配送信息</string>
    <string name="activity_order_arrival_time">到达时间：</string>
    <string name="activity_order_arrival_time_text">2017-03-16 11:49</string>
    <string name="activity_order_arrival_time_plan">预计30分钟后送达</string>
    <string name="activity_order_distribute_address">送餐地址：</string>
    <string name="activity_order_distribute_address_text">海外联谊大厦2210室</string>
    <string name="activity_order_distributor">送餐员：</string>
    <string name="activity_order_distributor_text">陈芝泽，15899861849</string>
    <string name="activity_order_commit_success">订单提交成功</string>
    <string name="activity_order_tracking">订单跟踪</string>
    <string name="activity_order_has_payed">订单已支付</string>
    <string name="activity_order_delivery_ing_">配送中</string>
    <string name="activity_order_waiting_for_receipting">待收货</string>

    <!-- Mine-->
    <string name="fragment_mine_me">我的</string>
    <string name="fragment_mine_wallet">钱包</string>
    <string name="fragment_mine_preferential">优惠</string>
    <string name="fragment_mine_integral">积分</string>
    <string name="fragment_mine_address">收货地址</string>
    <string name="fragment_mine_collection">我的收藏</string>
    <string name="fragment_mine_evaluation">历史评价</string>
    <string name="fragment_personal_security">账户与安全</string>
    <string name="fragment_personal_portrait">头像</string>
    <string name="fragment_personal_username">用户名</string>
    <string name="fragment_personal_setting">设置</string>
    <string name="fragment_personal_securitysetting">安全设置</string>
    <string name="fragment_personal_phone">手机</string>
    <string name="fragment_personal_login_password">登录密码</string>
    <string name="fragment_personal_pay_password">支付密码</string>
    <string name="activity_update_telephone">原手机号</string>
    <string name="activity_update_telephone_new">新手机号</string>
    <string name="activity_setting_service">客服电话</string>
    <string name="activity_setting_suggestion">意见反馈</string>
    <string name="activity_setting_check">检查更新</string>
    <string name="activity_setting_exit">退出登录</string>
    <string name="activity_register">注册</string>
    <string name="activity_login">登录</string>
    <string name="fragment_mine_login">登陆后可享受更多特权</string>
    <string name="telephone_error">手机号错误</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="activity_update_username">修改用户名</string>
    <string name="update_telephone">修改手机号码</string>
    <string name="update_pay_pwd">修改支付密码</string>
    <string name="update_login_pwd">修改登录密码</string>
    <string name="commit">确定</string>
    <string name="modify">修改</string>
    <string name="not_set">未设置</string>

    <!-- settingsuggestion -->
    <string name="activity_suggestion_title">意见反馈</string>
    <string name="activity_suggestion_commit">提交</string>

    <!-- hint -->
    <!-- MineFragment LoginActivity -->
    <string name="login_hint_pwd">密码</string>
    <string name="hint_login_telephone">手机号码</string>
    <string name="hint_suggestion">感謝您的意見</string>
    <string name="hint_old_pwd">旧密码</string>
    <string name="hint_new_pwd">新密码</string>

    <!--HomeFragment-->
    <string name="home_favourable_one_title">天天特价</string>
    <string name="home_favourable_one_desc">美食一折起</string>
    <string name="home_favourable_two_title">霸王餐</string>
    <string name="home_favourable_two_desc">领20元红包</string>
    <string name="home_favourable_three_title">满30减15</string>
    <string name="home_favourable_three_desc">3月半价减</string>
    <string name="home_favourable_four_title">下单减10</string>
    <string name="home_favourable_four_desc">粤吃粤开心</string>
    <string name="home_topbar_tv_location">深圳</string>
    <string name="home_topbar_et_hint">搜索商家、商品名称</string>
    <string name="home_topbar_text_one">星巴克</string>
    <string name="home_topbar_text_two">必胜客</string>
    <string name="home_topbar_text_three">鸭血粉丝</string>
    <string name="home_topbar_text_four">澳门皇茶</string>

    <!--GoodsDetailActivitty-->
    <string name="activity_goods_avg_time">平均配送时间:</string>
    <string name="activity_goods_desc">店家描述：</string>
    <string name="activity_goods_business_time">营业时间：</string>
    <string name="activity_goods_distribution_money">另需配送费</string>

    <!--Toast-->
    <string name="toast_order_remind">已提醒商家</string>
    <string name="toast_login_error">用户名或密码错误</string>
    <string name="toast_suggestion_contents">请输入反馈内容</string>
    <string name="toast_suggestion_commit">已收到反馈</string>
    <string name="toast_sdcard_error">手机存储不可用!</string>
    <string name="toast_phone_format_error">新手机号格式有误</string>
    <string name="toast_phone_no_match">旧手机不匹配</string>
    <string name="toast_enter_old_pwd">请输入旧密码！</string>
    <string name="toast_old_pay_error">旧密码不正确！</string>
    <string name="toast_enter_new_pwd">请输入新密码!</string>

    <!--订单状态-->

    <string name="order_state_all">全部</string>
    <string name="order_state_not_pay">未支付</string>
    <string name="order_state_not_delivery">未配送</string>
    <string name="order_state_delivery_ing">送餐中</string>
    <string name="order_state_not_comment">未评论</string>
    <string name="order_state_finish">已完成</string>

    <!--订单列表中按钮状态-->
    <string name="order_state_btn_not_pay">去支付</string>
    <string name="order_state_btn_not_delivery">去催单</string>
    <string name="order_state_btn_delivery_ing">查看进度</string>
    <string name="order_state_btn_not_comment">去评论</string>
    <string name="order_state_btn_finish">再来一单</string>
    <string name="order_btn_go_single">去下单</string>
    <string name="no_order_tv_content">还没有订单</string>
    <string name="activity_bind">绑定新手机</string>
    <!--加载更多-->
    <string name="text_load_more">点击加载更多</string>
    <string name="text_load_no_more">拉到底了~</string>


</resources>
