<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/appColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/fragment_home_topbar_magin5"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivHomeBarLocation"
            android:layout_width="@dimen/fragment_home_topbar_img_width"
            android:layout_height="@dimen/fragment_home_topbar_img_width"
            android:layout_marginLeft="@dimen/fragment_home_topbar_magin10"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="@dimen/fragment_home_topbar_text_size18"
            android:layout_toRightOf="@+id/ivHomeBarLocation"
            android:layout_centerVertical="true"
            android:text="@string/home_topbar_tv_location"/>

    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_home_topbar_hight"
        android:background="@drawable/shape_home_toolbar"
        android:gravity="center"
        android:enabled="false"
        android:layout_marginLeft="@dimen/fragment_home_topbar_magin10"
        android:layout_marginRight="@dimen/fragment_home_topbar_magin10"
        android:layout_marginTop="@dimen/fragment_home_topbar_magin5"
        android:hint="@string/home_topbar_et_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_home_topbar_magin5"
        android:orientation="horizontal">
        <TextView
            style="@style/style_home_top_bar_text"
            android:text="@string/home_topbar_text_one"
            android:layout_width="wrap_content"/>
        <TextView
            style="@style/style_home_top_bar_text"
            android:text="@string/home_topbar_text_two"/>
        <TextView
            style="@style/style_home_top_bar_text"
            android:text="@string/home_topbar_text_three"/>
        <TextView
            style="@style/style_home_top_bar_text"
            android:text="@string/home_topbar_text_four"/>

    </LinearLayout>

</LinearLayout>
