<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fragment_mine_ll"
    tools:context="www.formssi.goodtaste.activity.mine.UpdateLoginPasswordActivity">

    <include layout="@layout/layout_back_title_bar" />
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        android:padding="@dimen/medium_padding"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:layout_marginLeft="@dimen/medium_margin"
            android:hint="@string/hint_old_pwd"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/line_height_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/medium_padding">

        <EditText
            android:id="@+id/et_update_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@null"
            android:hint="@string/hint_new_pwd"
            android:padding="@dimen/small_padding" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_update_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:padding="@dimen/medium_padding"
        android:text="@string/commit"
        style="@style/button_blue_text_white"/>

</LinearLayout>
