<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/fragment_mine_ll"
              android:orientation="vertical"
              tools:context="www.formssi.goodtaste.activity.mine.UpdatePayPasswordActivity">

    <include
        android:id="@+id/in"
        layout="@layout/layout_back_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/medium_padding">

        <EditText
            android:id="@+id/et_pay_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@null"
            android:hint="@string/hint_old_pwd"
            android:padding="@dimen/small_padding"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/medium_padding">

        <EditText
            android:id="@+id/et_update_pay_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@null"
            android:hint="@string/hint_new_pwd"
            android:padding="@dimen/small_padding"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_update_pay_password"
        style="@style/button_blue_text_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:padding="@dimen/medium_padding"
        android:text="@string/commit"/>

</LinearLayout>
